meta tag keywords should be comma separated

--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@ add real anchor links for when javascript is unavail (but prevent default)
 consider minifying css/js/html
 w3c validate css/jscript (HTML is valid now)
 load bg and img images after page is ready and shown (do this in jquery document ready)
-consider disabling "dragging" in popup window, just scrolling is good
-	would like to be able to copy and paste from these windows
 get on IPhone/Android/Opera and test div scrolling, some say it works, others say no
 	want to be able to scroll with finger-sliding
 	not working, it seems, on Mom's IPhone
@@ -32,7 +30,7 @@ get on IPhone/Android/Opera and test div scrolling, some say it works, others sa
 end of to do list -->
 
 <meta name="description" content="Web development and technical services, including data organization, websites, content management, and application development.">
-<meta name="keywords" content="JQuery PHP OOP HTML CSS website webpage Javascript backups data organization architecture CMS content management technical freelance services">
+<meta name="keywords" content="JQuery, PHP, OOP, HTML, CSS, website, webpage, JavaScript, backups, data, organization, architecture, CMS, content, management, technical, freelance, services">
 <meta name="author" content="Jesse CXElegance">
 
 <!-- ensure smartphones don't try to zoom in automatically -->
