total reform of popup div scrolling, now it is linked to main window scrolling also added Git to list of tools in toolkit

--- a/index.html
+++ b/index.html
@@ -19,14 +19,7 @@ add real anchor links for when javascript is unavail (but prevent default)
 consider minifying css/js/html
 w3c validate css/jscript (HTML is valid now)
 load bg and img images after page is ready and shown (do this in jquery document ready)
-get on IPhone/Android/Opera and test div scrolling, some say it works, others say no
-	want to be able to scroll with finger-sliding
-	not working, it seems, on Mom's IPhone
-		the up/down arrows work but only on mouseup, mousedown/hold not working
-	consider getting rid of div scrolling and letting div take auto height
-		background page takes max(it's own height, div height)
-		get rid of up/down arrows
-
+get on IPhone/Android/Opera and test popup fixed-div scrolling
 end of to do list -->
 
 <meta name="description" content="Web development and technical services, including data organization, websites, content management, and application development.">
@@ -1005,6 +998,7 @@ end of to do list -->
 						<li>MVC frameworks</li>
 						<li>GIMP, Photoshop</li>
 						<li>Linux</li>
+						<li>Git</li>
 					</ul>
 				</div>
 
