--- a/index.html
+++ b/index.html
@@ -8,23 +8,30 @@
 <!-- Welcome to CXElegance.com, at this point I'm embarrassed that you
 	are looking at this code, I will be completely overhauling it -->
 
+<!-- VERSION: 1.5.1; 2013-04-14
+
+- transitional, working toward complete overhaul
+
+end of VERSION -->
+
 <!-- TO DO LIST
 
 * this website needs a complete overhaul
-* a COMPLETE REDO of JavaScript is underway (parts of it will be public at https://github.com/cxelegance/one-page-scroller)
+* a COMPLETE REDO of JavaScript is underway
 - get rid of div scrolling, mousewheeling, etc.
 - make better use of HTML5 data-attributes
 - get mouse pointers, i.e. use <a> links for links and preventDefault()
 - fix portfolio image width discrepancy (chrome firefox)
 - on super narrow pages, fix portfolio images and title extending past, causing scrollbar
 - stop scalable things shrinking to nothing on IPhone
+	or get rid of scaling, because also buggy on Android 2.2
 - replace page #'s with real text page names (carefully, javascript)
 - add real anchor links for when javascript is unavail (but prevent default)
-	consider adding hovers for non-touch users (notebooks, desktops)
 - consider minifying css/js/html (it's being sent compressed now, which is good)
-- w3c validate css/jscript (HTML is valid now)
+- w3c validate css/jscript/HTML
 - load bg and img images after page is ready and shown (do this in jquery document ready)
-- get on IPhone/Android/Opera and test popup fixed-div scrolling
+- get rid of pop up fixed div, implement new solution that is more touch screen/Android/IOS friendly
+- get rid of jQueryUI, currently being used for method: effect()
 
 end of TO DO LIST -->
 
@@ -32,8 +39,8 @@ end of TO DO LIST -->
 <meta name="keywords" content="jQuery, PHP, OOP, HTML, CSS, XML, Git, website, webpage, JavaScript, backups, data, organization, architecture, CMS, content, management, technical, freelance, services">
 <meta name="author" content="Jesse CXElegance">
 
-<!-- ensure smartphones don't try to zoom in automatically -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- ensure smartphones don't try to zoom in automatically, and disable scaling so Android 2.2 and others work with fixed div -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 <!-- offer a nice smartphone icon - 158 × 158 pixels -->
 	<link rel="apple-touch-icon" href="01_pics/12_iphone.png">
@@ -45,10 +52,10 @@ end of TO DO LIST -->
 	<link rel="icon" href="favicon.png" sizes="16x16" type="image/png">
 
 <!-- load the jQuery code -->
-	<!-- I am having difficulty getting compression on my site, so jQuery and jQueryUI are now being downloaded directly from jQuery, compressed, faster -->
-	<style type="text/css">@import "http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css";</style><!-- <style type="text/css">@import "00_jquery/css/custom-theme/jquery-ui-1.8.16.custom.css";</style> -->
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script><!-- <script type="text/javascript" src="00_jquery/js/jquery-1.6.4.min.js"></script> -->
-	<script type="text/javascript" src="http://code.jquery.com/ui/1.8.18/jquery-ui.min.js"></script><!-- <script type="text/javascript" src="00_jquery/js/jquery-ui-1.8.16.custom.min.js"></script> -->
+	<!-- I am having difficulty getting compression on my site for jQuery and jQueryUI, and maybe LESS -->
+	<!-- <style type="text/css">@import "http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css";</style><!-- <style type="text/css">@import "00_jquery/css/custom-theme/jquery-ui-1.8.16.custom.css";</style> -->
+	<script type="text/javascript" src="03_js/jquery-1.6.4.min.js"></script>
+	<script type="text/javascript" src="03_js/jquery-ui-1.8.16.custom.min.js"></script>
 	<!-- <script type="text/javascript" src="00_jquery/JScrollPane/jquery.mousewheel.js"></script> -->
 
 <!-- load my custom jQuery/JavaScript code -->
@@ -64,7 +71,7 @@ end of TO DO LIST -->
 	<link rel="alternate stylesheet" type="text/css" href="02_css/13_rescue.css" title="help">
 
 <!-- load LESS JavaScript code -->
-	<script type="text/javascript" src="00_jquery/LESS/less-1.2.2.min.js"></script>
+	<script type="text/javascript" src="03_js/less-1.2.2.min.js"></script>
 
 <!-- title will be changed by JavaScript -->
 	<title>CXElegance</title>
